--- a/films/templates/partials/navbar.html
+++ b/films/templates/partials/navbar.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      {% if user.is_authenticated %}
+      <a class="navbar-brand" href="#">IMDI</a>
+      {% else%}
+      <a class="navbar-brand" href="#">IMDI: Welcome to the website</a>
+
+      {% endif %}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,6 +14,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{%url 'home'%}">Home</a>
           </li>
+          {% if user.is_superuser %}
           <li class="nav-item">
             <a class="nav-link" href="{%url 'create_film' %}">Add Film</a>
           </li>
@@ -26,9 +32,25 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
+          {% endif  %}
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            
+            <a class="nav-link " href="{% url 'logout' %}" tabindex="-1" >Log Out {{user.username}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="{% url 'profile' user.id %}" tabindex="-1" >{{user.username}} profile</a>
+          </li>
+            {% else %}
+            <li class="nav-item">
+            <a class="nav-link " href="{% url 'login' %}" tabindex="-1" >Log In</a>
+          </li>
+          <li class="nav-item"></li>
+            <a class="nav-link " href="{% url 'register' %}" tabindex="-1" >Sign Up</a>
+
+            
+          </li>
+          {% endif%}
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
